manifests/dvwa-metal-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa-lb
spec:
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
      - name: dvwa
        image: ajhanna/dvwa
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa-service
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "dvwa"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "600"
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: dvwa
  type: LoadBalancer
