manifests/vuln-ssh.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuln-ssh
  labels:
    app: vuln-ssh
spec:
  replicas: 40
  selector:
    matchLabels:
      app: vuln-ssh
  template:
    metadata:
      labels:
        app: vuln-ssh
    spec:
      containers:
      - name: vuln-ssh
        image: ajhanna/vuln-ssh
        ports:
        - containerPort: 22
        resources:
          limits:
            cpu: "1000m"
            memory: "600Mi"
          requests:
            cpu: "200m"
            memory: "200Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: vuln-ssh-service
  labels:
    app: vuln-ssh
spec:
  ports:
  - name: http
    port: 22
    targetPort: 22
  selector:
    app: vuln-ssh
  sessionAffinityConfig:
   clientIP:
      timeoutSeconds: 1000000
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vuln-ssh-ingress
  labels:
    app: vuln-ssh
spec:
  backend:
    serviceName: vuln-ssh-service
    servicePort: 22
